# ai-chat-wrapper

./: .env.example  .gitignore  README.md  SPEC.md  clipboard_app.py  example_cli.py  pyproject.toml
.github/workflows/: publish-to-pypi.yml  python-tests.yml
src/ai_chat_wrapper/: __init__.py  gemini_client.py
src/ai_service/: __init__.py  base_client.py  factory.py  gemini_client.py  openai_client.py  types.py
tests/: test_ai_chat_wrapper.py  test_ai_service.py  test_gemini_client.py
