[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-service"
version = "0.1.0"
description = "AI wrapper service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://example.com"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_service*"]
