[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-service"
version = "0.1.0"
description = "AI wrapper service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
]

[project.authors]
name = "taketake-dev"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://example.com"
Repository = "https://example.com/repo"

[project.classifiers]
items = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://example.com"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_service*"]
