[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-chat-wrapper"
version = "0.1.0"
description = "AI chat wrapper service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
]

authors = [
    { name = "taketake-dev" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://example.com"
Repository = "https://github.com/taketake-dev/ai-chat-wrapper"



[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_chat_wrapper*"]
